tests/baselines/reference/implicitAnyDeclareFunctionWithoutFormalType2.errors.txt
implicitAnyDeclareFunctionWithoutFormalType2.ts(4,12): error TS2454: Variable 'x' is used before being assigned.


==== implicitAnyDeclareFunctionWithoutFormalType2.ts (1 errors) ====
    // generates function fn1(): number;
    function fn1() {
        var x: number;
        return x;
               ~
!!! error TS2454: Variable 'x' is used before being assigned.
    }
    // generates function fn2(): any;
    function fn2(): any {
        var x: any;
        return x;
    }
    // generates function fn3();
    function fn3() {
        var x: any;
        return x;
    }
    